--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <header
       class="fond"
-      style="background-image: url(./img/fond.jpg); background-size: 100%"
+      style="background-image: url(./img/fond.jpg); background-size: 100% 100%;"
     >
       <img src="./img/logo-digicel.png" class="logo" />
       <h1>Digicel, l'opérateur du futur</h1>
@@ -37,6 +37,7 @@
     <main>
       <section class="telephone">
         <h2>Nos Produits</h2>
+        <div class="desktop">
         <div class="modeles">
           <h3>iphone 7</h3>
           <img
@@ -81,6 +82,7 @@
             </div>
             <p class="prix">859,90€</p>
           </div>
+        </div>
         </div>
       </section>
 
